--- a/src/style.css
+++ b/src/style.css
@@ -49,7 +49,7 @@
   --lineHeight-none: 1;
   --lineHeight-tight: 1.1;
   --lineHeight-normal: 1.5;
-  --lineHeight-relaxed: 1.625;
+  --lineHeight-relaxed: 2;
   /* 1.200 Minor Third Type Scale */
   --fontSize-0: 0.8rem;
   --fontSize-1: 1rem;
@@ -59,13 +59,15 @@
   --fontSize-5: 1.4641rem;
   --fontSize-6: 1.61rem;
   --fontSize-7: 1.77rem;
-  --color-primary: #101010;
+  --color-primary: #000;
   --color-secondary: rgb(0 250 250);
   --color-text: #2e353f;
   --color-text-light: #4f5969;
   --color-heading: #1a202c;
   --color-heading-black: black;
   --color-accent: #d1dce5;
+  --color-twitter: #a5ddff;
+  --color-weibo: rgb(255, 213, 183);
 }
 
 /* HTML elements */
@@ -108,8 +110,8 @@ h4,
 h5,
 h6 {
   font-family: var(--font-heading);
-  margin-top: var(--spacing-12);
-  margin-bottom: var(--spacing-6);
+  margin-top: var(--spacing-6);
+  margin-bottom: var(--spacing-4);
   line-height: var(--lineHeight-tight);
   letter-spacing: -0.025em;
 }
@@ -165,33 +167,34 @@ h6 > a {
 
 /* Prose */
 
-p {
+p,
+ul li,
+ol li {
   line-height: var(--lineHeight-relaxed);
   --baseline-multiplier: 0.179;
   --x-height-multiplier: 0.35;
-  margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
+  margin: var(--spacing-0) var(--spacing-0) var(--spacing-2) var(--spacing-0);
   padding: var(--spacing-0);
 }
 
 ul,
 ol {
-  margin-left: var(--spacing-0);
-  margin-right: var(--spacing-0);
-  padding: var(--spacing-0);
-  margin-bottom: var(--spacing-8);
+  margin: var(--spacing-0);
+  padding-left: 1.2rem;
   list-style-position: outside;
   list-style-image: none;
 }
 
-ul li,
-ol li {
-  padding-left: var(--spacing-0);
-  margin-bottom: calc(var(--spacing-8) / 2);
-}
+/* {
+  line-height: var(--lineHeight-relaxed);
+  --baseline-multiplier: 0.179;
+  --x-height-multiplier: 0.35;
+  margin: var(--spacing-0) var(--spacing-0) var(--spacing-2) var(--spacing-0);
+} */
 
-li > p {
+/* li > p {
   margin-bottom: calc(var(--spacing-8) / 2);
-}
+} */
 
 li *:last-child {
   margin-bottom: var(--spacing-0);
@@ -260,6 +263,48 @@ a:focus {
   );
 }
 
+a[type="weibo"] {
+  background: linear-gradient(
+    to bottom,
+    transparent 0%,
+    transparent 75%,
+    var(--color-weibo) 75%,
+    var(--color-weibo) 100%
+  );
+}
+
+a[type="weibo"]:hover,
+a[type="weibo"]:focus {
+  background: linear-gradient(
+    to bottom,
+    transparent 0%,
+    transparent 0%,
+    var(--color-weibo) 0%,
+    var(--color-weibo) 100%
+  );
+}
+
+a[type="twitter"] {
+  background: linear-gradient(
+    to bottom,
+    transparent 0%,
+    transparent 75%,
+    var(--color-twitter) 75%,
+    var(--color-twitter) 100%
+  );
+}
+
+a[type="twitter"]:hover,
+a[type="twitter"]:focus {
+  background: linear-gradient(
+    to bottom,
+    transparent 0%,
+    transparent 0%,
+    var(--color-twitter) 0%,
+    var(--color-twitter) 100%
+  );
+}
+
 /* .global-header a {
   text-decoration: none;
   color: var(--color-primary);
@@ -319,6 +364,19 @@ a:focus {
   background: none !important;
 }
 
+.header {
+  width: 100%;
+  margin-bottom: var(--spacing-4);
+}
+
+.header h1 {
+  margin-bottom: var(--spacing-2);
+}
+
+small {
+  opacity: 0.75;
+}
+
 .bio {
   display: flex;
 }
@@ -327,13 +385,25 @@ a:focus {
   margin-left: var(--spacing-4);
 }
 
+.blog-post {
+  margin-bottom: var(--spacing-6);
+}
+
+.blog-post header {
+  margin-bottom: var(--spacing-4);
+}
+
 .blog-post header h1 {
-  margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
+  margin: var(--spacing-0) var(--spacing-0) var(--spacing-3) var(--spacing-0);
 }
 
 .blog-post header p {
   font-size: var(--fontSize-0);
   font-family: var(--font-heading);
+}
+
+.blog-post-nav {
+  margin-top: var(--spacing-2);
 }
 
 .blog-post-nav ul {
